fix hotkeys link wrapping to 2 lines

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -2441,7 +2441,7 @@ screen and (max-width: 480px) {
 
 .c-options-tab__hotkeys-link {
   cursor: pointer;
-  width: 21rem;
+  width: 22rem;
   align-self: center;
 }
 
